--- a/blog_me/templates/Home.html
+++ b/blog_me/templates/Home.html
@@ -1,13 +1,33 @@
 {% extends 'base.html' %}
 
-  {% block content %}    
-
+  {% block content %}
+  
+    {% for post in featured_posts %}
+    {% if forloop.first %}
     <div class=" p-3 p-md-5 text-white bg-dark">
       <div class="col-md-6 px-0">
-        <h1 class="display-4 font-italic">Welcome to Django Blog</h1>
-        <p class="lead my-3">A simple blog built with Django framework.</p>
+        <h1 class="display-4 font-italic">{{ post.title }}</h1>
+        <p class="lead my-3">{{ post.short_description }}</p>
         <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
       </div>
     </div>
+    {% endif%}
+    {% endfor %}
+
+    <h3 class="text-uppercase text-warning pl-3" style="letter-spacing: 2px;">Featured Posts</h3>
+  <div class="row mb-2">
+    {% for post in featured_posts %}
+    {% if not forloop.first %}
+    <div class="col-md-6">
+      <div class="card border-0" >
+        <div class="card-body">
+          <h3><a href="#" class="text-dark">{{ post.title }}</a></h3>
+          <small class="mb-1 text-muted">{{ post.create_at | timesince }} ago | {{ post.author }}</small>
+          <p class="card-text">{{ post.short_description | truncatewords:25 }}</p>
+        </div>
+      </div>
+    </div>
+    {% endif %}
+    {% endfor %}
 
 {% endblock %}
