--- a/blog_me/templates/base.html
+++ b/blog_me/templates/base.html
@@ -14,24 +14,24 @@
     <div class="container">
       <header class="blog-header py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
-          <div class="col-4 pt-1">
-            <a class="blog-header-logo text-dark" href="/">
+          <div class="col-3 pt-1">
+            <a class="blog-header-logo text-dark text-uppercase"style="letter-spacing: 3px;" href="/">
               blogMe
             </a>
           </div>
-          </div>
-          <nav class="nav nav-masthead justify-content-center rounded bg-dark p-2 p-md-1">
-            <a class="nav-link active" href="/">Home</a>
-            <a class="nav-link" href="#">Contacts</a>
-            <a class="nav-link" href="#">About</a>
-          </nav>
+        </div>
+        <nav class="nav nav-masthead justify-content-center rounded p-2 p-md-1">
+          {% for cate in categories %}
+        <a class="p-3 text-muted" href="#">{{ cate.category_names }}</a>
+        {% endfor %}
+        </nav>
         </div>
       </header>
 {% block content %}
 
 {% endblock %}
 
-<footer class="blog-footer text-center">
+<footer class="blog-footer text-center m-2 col-3 pt-2 text-muted text-uppercase" style="letter-spacing: 2px;">
     <p>Django blog built by Morii</p>
   </footer>
   </body>
